generated/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    VARIABLE
    NUMBER
    ASSIGNATION

Grammar

Rule 0     S' -> document
Rule 1     document -> tag
Rule 2     document -> word
Rule 3     document -> document tag
Rule 4     document -> document word
Rule 5     tag -> ITALIC
Rule 6     tag -> BOLD
Rule 7     tag -> FLUO
Rule 8     tag -> PARAGRAPHE
Rule 9     tag -> SEPARATION_LINE
Rule 10    word -> WORD
Rule 11    tag -> ol
Rule 12    tag -> olSubList
Rule 13    ol -> OL1
Rule 14    olSubList -> OL1 oList
Rule 15    oList -> OL2 oList
Rule 16    oList -> OL2
Rule 17    tag -> TITLE3
Rule 18    tag -> TITLE2
Rule 19    tag -> TITLE1
Rule 20    tag -> ul1SubList
Rule 21    ul1SubList -> UL1 ul1List
Rule 22    ul1List -> UL1 ul1List
Rule 23    ul1List -> UL1 ul2SubList
Rule 24    ul1List -> UL1
Rule 25    ul2SubList -> UL1 ul2List
Rule 26    ul2List -> UL2 ul2List
Rule 27    ul2List -> UL2
Rule 28    tag -> LINK
Rule 29    tag -> IMAGE
Rule 30    tag -> REFERENCE

Terminals, with rules where they appear

ASSIGNATION          : 
BOLD                 : 6
FLUO                 : 7
IMAGE                : 29
ITALIC               : 5
LINK                 : 28
NUMBER               : 
OL1                  : 13 14
OL2                  : 15 16
PARAGRAPHE           : 8
REFERENCE            : 30
SEPARATION_LINE      : 9
TITLE1               : 19
TITLE2               : 18
TITLE3               : 17
UL1                  : 21 22 23 24 25
UL2                  : 26 27
VARIABLE             : 
WORD                 : 10
error                : 

Nonterminals, with rules where they appear

document             : 3 4 0
oList                : 14 15
ol                   : 11
olSubList            : 12
tag                  : 1 3
ul1List              : 21 22
ul1SubList           : 20
ul2List              : 25 26
ul2SubList           : 23
word                 : 2 4

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . tag
    (2) document -> . word
    (3) document -> . document tag
    (4) document -> . document word
    (5) tag -> . ITALIC
    (6) tag -> . BOLD
    (7) tag -> . FLUO
    (8) tag -> . PARAGRAPHE
    (9) tag -> . SEPARATION_LINE
    (11) tag -> . ol
    (12) tag -> . olSubList
    (17) tag -> . TITLE3
    (18) tag -> . TITLE2
    (19) tag -> . TITLE1
    (20) tag -> . ul1SubList
    (28) tag -> . LINK
    (29) tag -> . IMAGE
    (30) tag -> . REFERENCE
    (10) word -> . WORD
    (13) ol -> . OL1
    (14) olSubList -> . OL1 oList
    (21) ul1SubList -> . UL1 ul1List

    ITALIC          shift and go to state 9
    BOLD            shift and go to state 18
    FLUO            shift and go to state 16
    PARAGRAPHE      shift and go to state 6
    SEPARATION_LINE shift and go to state 3
    TITLE3          shift and go to state 8
    TITLE2          shift and go to state 1
    TITLE1          shift and go to state 4
    LINK            shift and go to state 11
    IMAGE           shift and go to state 7
    REFERENCE       shift and go to state 20
    WORD            shift and go to state 15
    OL1             shift and go to state 10
    UL1             shift and go to state 17

    ul1SubList                     shift and go to state 2
    ol                             shift and go to state 19
    document                       shift and go to state 12
    tag                            shift and go to state 13
    word                           shift and go to state 14
    olSubList                      shift and go to state 5

state 1

    (18) tag -> TITLE2 .

    ITALIC          reduce using rule 18 (tag -> TITLE2 .)
    BOLD            reduce using rule 18 (tag -> TITLE2 .)
    FLUO            reduce using rule 18 (tag -> TITLE2 .)
    PARAGRAPHE      reduce using rule 18 (tag -> TITLE2 .)
    SEPARATION_LINE reduce using rule 18 (tag -> TITLE2 .)
    TITLE3          reduce using rule 18 (tag -> TITLE2 .)
    TITLE2          reduce using rule 18 (tag -> TITLE2 .)
    TITLE1          reduce using rule 18 (tag -> TITLE2 .)
    LINK            reduce using rule 18 (tag -> TITLE2 .)
    IMAGE           reduce using rule 18 (tag -> TITLE2 .)
    REFERENCE       reduce using rule 18 (tag -> TITLE2 .)
    WORD            reduce using rule 18 (tag -> TITLE2 .)
    OL1             reduce using rule 18 (tag -> TITLE2 .)
    UL1             reduce using rule 18 (tag -> TITLE2 .)
    $end            reduce using rule 18 (tag -> TITLE2 .)


state 2

    (20) tag -> ul1SubList .

    ITALIC          reduce using rule 20 (tag -> ul1SubList .)
    BOLD            reduce using rule 20 (tag -> ul1SubList .)
    FLUO            reduce using rule 20 (tag -> ul1SubList .)
    PARAGRAPHE      reduce using rule 20 (tag -> ul1SubList .)
    SEPARATION_LINE reduce using rule 20 (tag -> ul1SubList .)
    TITLE3          reduce using rule 20 (tag -> ul1SubList .)
    TITLE2          reduce using rule 20 (tag -> ul1SubList .)
    TITLE1          reduce using rule 20 (tag -> ul1SubList .)
    LINK            reduce using rule 20 (tag -> ul1SubList .)
    IMAGE           reduce using rule 20 (tag -> ul1SubList .)
    REFERENCE       reduce using rule 20 (tag -> ul1SubList .)
    WORD            reduce using rule 20 (tag -> ul1SubList .)
    OL1             reduce using rule 20 (tag -> ul1SubList .)
    UL1             reduce using rule 20 (tag -> ul1SubList .)
    $end            reduce using rule 20 (tag -> ul1SubList .)


state 3

    (9) tag -> SEPARATION_LINE .

    ITALIC          reduce using rule 9 (tag -> SEPARATION_LINE .)
    BOLD            reduce using rule 9 (tag -> SEPARATION_LINE .)
    FLUO            reduce using rule 9 (tag -> SEPARATION_LINE .)
    PARAGRAPHE      reduce using rule 9 (tag -> SEPARATION_LINE .)
    SEPARATION_LINE reduce using rule 9 (tag -> SEPARATION_LINE .)
    TITLE3          reduce using rule 9 (tag -> SEPARATION_LINE .)
    TITLE2          reduce using rule 9 (tag -> SEPARATION_LINE .)
    TITLE1          reduce using rule 9 (tag -> SEPARATION_LINE .)
    LINK            reduce using rule 9 (tag -> SEPARATION_LINE .)
    IMAGE           reduce using rule 9 (tag -> SEPARATION_LINE .)
    REFERENCE       reduce using rule 9 (tag -> SEPARATION_LINE .)
    WORD            reduce using rule 9 (tag -> SEPARATION_LINE .)
    OL1             reduce using rule 9 (tag -> SEPARATION_LINE .)
    UL1             reduce using rule 9 (tag -> SEPARATION_LINE .)
    $end            reduce using rule 9 (tag -> SEPARATION_LINE .)


state 4

    (19) tag -> TITLE1 .

    ITALIC          reduce using rule 19 (tag -> TITLE1 .)
    BOLD            reduce using rule 19 (tag -> TITLE1 .)
    FLUO            reduce using rule 19 (tag -> TITLE1 .)
    PARAGRAPHE      reduce using rule 19 (tag -> TITLE1 .)
    SEPARATION_LINE reduce using rule 19 (tag -> TITLE1 .)
    TITLE3          reduce using rule 19 (tag -> TITLE1 .)
    TITLE2          reduce using rule 19 (tag -> TITLE1 .)
    TITLE1          reduce using rule 19 (tag -> TITLE1 .)
    LINK            reduce using rule 19 (tag -> TITLE1 .)
    IMAGE           reduce using rule 19 (tag -> TITLE1 .)
    REFERENCE       reduce using rule 19 (tag -> TITLE1 .)
    WORD            reduce using rule 19 (tag -> TITLE1 .)
    OL1             reduce using rule 19 (tag -> TITLE1 .)
    UL1             reduce using rule 19 (tag -> TITLE1 .)
    $end            reduce using rule 19 (tag -> TITLE1 .)


state 5

    (12) tag -> olSubList .

    ITALIC          reduce using rule 12 (tag -> olSubList .)
    BOLD            reduce using rule 12 (tag -> olSubList .)
    FLUO            reduce using rule 12 (tag -> olSubList .)
    PARAGRAPHE      reduce using rule 12 (tag -> olSubList .)
    SEPARATION_LINE reduce using rule 12 (tag -> olSubList .)
    TITLE3          reduce using rule 12 (tag -> olSubList .)
    TITLE2          reduce using rule 12 (tag -> olSubList .)
    TITLE1          reduce using rule 12 (tag -> olSubList .)
    LINK            reduce using rule 12 (tag -> olSubList .)
    IMAGE           reduce using rule 12 (tag -> olSubList .)
    REFERENCE       reduce using rule 12 (tag -> olSubList .)
    WORD            reduce using rule 12 (tag -> olSubList .)
    OL1             reduce using rule 12 (tag -> olSubList .)
    UL1             reduce using rule 12 (tag -> olSubList .)
    $end            reduce using rule 12 (tag -> olSubList .)


state 6

    (8) tag -> PARAGRAPHE .

    ITALIC          reduce using rule 8 (tag -> PARAGRAPHE .)
    BOLD            reduce using rule 8 (tag -> PARAGRAPHE .)
    FLUO            reduce using rule 8 (tag -> PARAGRAPHE .)
    PARAGRAPHE      reduce using rule 8 (tag -> PARAGRAPHE .)
    SEPARATION_LINE reduce using rule 8 (tag -> PARAGRAPHE .)
    TITLE3          reduce using rule 8 (tag -> PARAGRAPHE .)
    TITLE2          reduce using rule 8 (tag -> PARAGRAPHE .)
    TITLE1          reduce using rule 8 (tag -> PARAGRAPHE .)
    LINK            reduce using rule 8 (tag -> PARAGRAPHE .)
    IMAGE           reduce using rule 8 (tag -> PARAGRAPHE .)
    REFERENCE       reduce using rule 8 (tag -> PARAGRAPHE .)
    WORD            reduce using rule 8 (tag -> PARAGRAPHE .)
    OL1             reduce using rule 8 (tag -> PARAGRAPHE .)
    UL1             reduce using rule 8 (tag -> PARAGRAPHE .)
    $end            reduce using rule 8 (tag -> PARAGRAPHE .)


state 7

    (29) tag -> IMAGE .

    ITALIC          reduce using rule 29 (tag -> IMAGE .)
    BOLD            reduce using rule 29 (tag -> IMAGE .)
    FLUO            reduce using rule 29 (tag -> IMAGE .)
    PARAGRAPHE      reduce using rule 29 (tag -> IMAGE .)
    SEPARATION_LINE reduce using rule 29 (tag -> IMAGE .)
    TITLE3          reduce using rule 29 (tag -> IMAGE .)
    TITLE2          reduce using rule 29 (tag -> IMAGE .)
    TITLE1          reduce using rule 29 (tag -> IMAGE .)
    LINK            reduce using rule 29 (tag -> IMAGE .)
    IMAGE           reduce using rule 29 (tag -> IMAGE .)
    REFERENCE       reduce using rule 29 (tag -> IMAGE .)
    WORD            reduce using rule 29 (tag -> IMAGE .)
    OL1             reduce using rule 29 (tag -> IMAGE .)
    UL1             reduce using rule 29 (tag -> IMAGE .)
    $end            reduce using rule 29 (tag -> IMAGE .)


state 8

    (17) tag -> TITLE3 .

    ITALIC          reduce using rule 17 (tag -> TITLE3 .)
    BOLD            reduce using rule 17 (tag -> TITLE3 .)
    FLUO            reduce using rule 17 (tag -> TITLE3 .)
    PARAGRAPHE      reduce using rule 17 (tag -> TITLE3 .)
    SEPARATION_LINE reduce using rule 17 (tag -> TITLE3 .)
    TITLE3          reduce using rule 17 (tag -> TITLE3 .)
    TITLE2          reduce using rule 17 (tag -> TITLE3 .)
    TITLE1          reduce using rule 17 (tag -> TITLE3 .)
    LINK            reduce using rule 17 (tag -> TITLE3 .)
    IMAGE           reduce using rule 17 (tag -> TITLE3 .)
    REFERENCE       reduce using rule 17 (tag -> TITLE3 .)
    WORD            reduce using rule 17 (tag -> TITLE3 .)
    OL1             reduce using rule 17 (tag -> TITLE3 .)
    UL1             reduce using rule 17 (tag -> TITLE3 .)
    $end            reduce using rule 17 (tag -> TITLE3 .)


state 9

    (5) tag -> ITALIC .

    ITALIC          reduce using rule 5 (tag -> ITALIC .)
    BOLD            reduce using rule 5 (tag -> ITALIC .)
    FLUO            reduce using rule 5 (tag -> ITALIC .)
    PARAGRAPHE      reduce using rule 5 (tag -> ITALIC .)
    SEPARATION_LINE reduce using rule 5 (tag -> ITALIC .)
    TITLE3          reduce using rule 5 (tag -> ITALIC .)
    TITLE2          reduce using rule 5 (tag -> ITALIC .)
    TITLE1          reduce using rule 5 (tag -> ITALIC .)
    LINK            reduce using rule 5 (tag -> ITALIC .)
    IMAGE           reduce using rule 5 (tag -> ITALIC .)
    REFERENCE       reduce using rule 5 (tag -> ITALIC .)
    WORD            reduce using rule 5 (tag -> ITALIC .)
    OL1             reduce using rule 5 (tag -> ITALIC .)
    UL1             reduce using rule 5 (tag -> ITALIC .)
    $end            reduce using rule 5 (tag -> ITALIC .)


state 10

    (13) ol -> OL1 .
    (14) olSubList -> OL1 . oList
    (15) oList -> . OL2 oList
    (16) oList -> . OL2

    ITALIC          reduce using rule 13 (ol -> OL1 .)
    BOLD            reduce using rule 13 (ol -> OL1 .)
    FLUO            reduce using rule 13 (ol -> OL1 .)
    PARAGRAPHE      reduce using rule 13 (ol -> OL1 .)
    SEPARATION_LINE reduce using rule 13 (ol -> OL1 .)
    TITLE3          reduce using rule 13 (ol -> OL1 .)
    TITLE2          reduce using rule 13 (ol -> OL1 .)
    TITLE1          reduce using rule 13 (ol -> OL1 .)
    LINK            reduce using rule 13 (ol -> OL1 .)
    IMAGE           reduce using rule 13 (ol -> OL1 .)
    REFERENCE       reduce using rule 13 (ol -> OL1 .)
    WORD            reduce using rule 13 (ol -> OL1 .)
    OL1             reduce using rule 13 (ol -> OL1 .)
    UL1             reduce using rule 13 (ol -> OL1 .)
    $end            reduce using rule 13 (ol -> OL1 .)
    OL2             shift and go to state 21

    oList                          shift and go to state 22

state 11

    (28) tag -> LINK .

    ITALIC          reduce using rule 28 (tag -> LINK .)
    BOLD            reduce using rule 28 (tag -> LINK .)
    FLUO            reduce using rule 28 (tag -> LINK .)
    PARAGRAPHE      reduce using rule 28 (tag -> LINK .)
    SEPARATION_LINE reduce using rule 28 (tag -> LINK .)
    TITLE3          reduce using rule 28 (tag -> LINK .)
    TITLE2          reduce using rule 28 (tag -> LINK .)
    TITLE1          reduce using rule 28 (tag -> LINK .)
    LINK            reduce using rule 28 (tag -> LINK .)
    IMAGE           reduce using rule 28 (tag -> LINK .)
    REFERENCE       reduce using rule 28 (tag -> LINK .)
    WORD            reduce using rule 28 (tag -> LINK .)
    OL1             reduce using rule 28 (tag -> LINK .)
    UL1             reduce using rule 28 (tag -> LINK .)
    $end            reduce using rule 28 (tag -> LINK .)


state 12

    (0) S' -> document .
    (3) document -> document . tag
    (4) document -> document . word
    (5) tag -> . ITALIC
    (6) tag -> . BOLD
    (7) tag -> . FLUO
    (8) tag -> . PARAGRAPHE
    (9) tag -> . SEPARATION_LINE
    (11) tag -> . ol
    (12) tag -> . olSubList
    (17) tag -> . TITLE3
    (18) tag -> . TITLE2
    (19) tag -> . TITLE1
    (20) tag -> . ul1SubList
    (28) tag -> . LINK
    (29) tag -> . IMAGE
    (30) tag -> . REFERENCE
    (10) word -> . WORD
    (13) ol -> . OL1
    (14) olSubList -> . OL1 oList
    (21) ul1SubList -> . UL1 ul1List

    ITALIC          shift and go to state 9
    BOLD            shift and go to state 18
    FLUO            shift and go to state 16
    PARAGRAPHE      shift and go to state 6
    SEPARATION_LINE shift and go to state 3
    TITLE3          shift and go to state 8
    TITLE2          shift and go to state 1
    TITLE1          shift and go to state 4
    LINK            shift and go to state 11
    IMAGE           shift and go to state 7
    REFERENCE       shift and go to state 20
    WORD            shift and go to state 15
    OL1             shift and go to state 10
    UL1             shift and go to state 17

    ul1SubList                     shift and go to state 2
    ol                             shift and go to state 19
    tag                            shift and go to state 23
    word                           shift and go to state 24
    olSubList                      shift and go to state 5

state 13

    (1) document -> tag .

    ITALIC          reduce using rule 1 (document -> tag .)
    BOLD            reduce using rule 1 (document -> tag .)
    FLUO            reduce using rule 1 (document -> tag .)
    PARAGRAPHE      reduce using rule 1 (document -> tag .)
    SEPARATION_LINE reduce using rule 1 (document -> tag .)
    TITLE3          reduce using rule 1 (document -> tag .)
    TITLE2          reduce using rule 1 (document -> tag .)
    TITLE1          reduce using rule 1 (document -> tag .)
    LINK            reduce using rule 1 (document -> tag .)
    IMAGE           reduce using rule 1 (document -> tag .)
    REFERENCE       reduce using rule 1 (document -> tag .)
    WORD            reduce using rule 1 (document -> tag .)
    OL1             reduce using rule 1 (document -> tag .)
    UL1             reduce using rule 1 (document -> tag .)
    $end            reduce using rule 1 (document -> tag .)


state 14

    (2) document -> word .

    ITALIC          reduce using rule 2 (document -> word .)
    BOLD            reduce using rule 2 (document -> word .)
    FLUO            reduce using rule 2 (document -> word .)
    PARAGRAPHE      reduce using rule 2 (document -> word .)
    SEPARATION_LINE reduce using rule 2 (document -> word .)
    TITLE3          reduce using rule 2 (document -> word .)
    TITLE2          reduce using rule 2 (document -> word .)
    TITLE1          reduce using rule 2 (document -> word .)
    LINK            reduce using rule 2 (document -> word .)
    IMAGE           reduce using rule 2 (document -> word .)
    REFERENCE       reduce using rule 2 (document -> word .)
    WORD            reduce using rule 2 (document -> word .)
    OL1             reduce using rule 2 (document -> word .)
    UL1             reduce using rule 2 (document -> word .)
    $end            reduce using rule 2 (document -> word .)


state 15

    (10) word -> WORD .

    ITALIC          reduce using rule 10 (word -> WORD .)
    BOLD            reduce using rule 10 (word -> WORD .)
    FLUO            reduce using rule 10 (word -> WORD .)
    PARAGRAPHE      reduce using rule 10 (word -> WORD .)
    SEPARATION_LINE reduce using rule 10 (word -> WORD .)
    TITLE3          reduce using rule 10 (word -> WORD .)
    TITLE2          reduce using rule 10 (word -> WORD .)
    TITLE1          reduce using rule 10 (word -> WORD .)
    LINK            reduce using rule 10 (word -> WORD .)
    IMAGE           reduce using rule 10 (word -> WORD .)
    REFERENCE       reduce using rule 10 (word -> WORD .)
    WORD            reduce using rule 10 (word -> WORD .)
    OL1             reduce using rule 10 (word -> WORD .)
    UL1             reduce using rule 10 (word -> WORD .)
    $end            reduce using rule 10 (word -> WORD .)


state 16

    (7) tag -> FLUO .

    ITALIC          reduce using rule 7 (tag -> FLUO .)
    BOLD            reduce using rule 7 (tag -> FLUO .)
    FLUO            reduce using rule 7 (tag -> FLUO .)
    PARAGRAPHE      reduce using rule 7 (tag -> FLUO .)
    SEPARATION_LINE reduce using rule 7 (tag -> FLUO .)
    TITLE3          reduce using rule 7 (tag -> FLUO .)
    TITLE2          reduce using rule 7 (tag -> FLUO .)
    TITLE1          reduce using rule 7 (tag -> FLUO .)
    LINK            reduce using rule 7 (tag -> FLUO .)
    IMAGE           reduce using rule 7 (tag -> FLUO .)
    REFERENCE       reduce using rule 7 (tag -> FLUO .)
    WORD            reduce using rule 7 (tag -> FLUO .)
    OL1             reduce using rule 7 (tag -> FLUO .)
    UL1             reduce using rule 7 (tag -> FLUO .)
    $end            reduce using rule 7 (tag -> FLUO .)


state 17

    (21) ul1SubList -> UL1 . ul1List
    (22) ul1List -> . UL1 ul1List
    (23) ul1List -> . UL1 ul2SubList
    (24) ul1List -> . UL1

    UL1             shift and go to state 25

    ul1List                        shift and go to state 26

state 18

    (6) tag -> BOLD .

    ITALIC          reduce using rule 6 (tag -> BOLD .)
    BOLD            reduce using rule 6 (tag -> BOLD .)
    FLUO            reduce using rule 6 (tag -> BOLD .)
    PARAGRAPHE      reduce using rule 6 (tag -> BOLD .)
    SEPARATION_LINE reduce using rule 6 (tag -> BOLD .)
    TITLE3          reduce using rule 6 (tag -> BOLD .)
    TITLE2          reduce using rule 6 (tag -> BOLD .)
    TITLE1          reduce using rule 6 (tag -> BOLD .)
    LINK            reduce using rule 6 (tag -> BOLD .)
    IMAGE           reduce using rule 6 (tag -> BOLD .)
    REFERENCE       reduce using rule 6 (tag -> BOLD .)
    WORD            reduce using rule 6 (tag -> BOLD .)
    OL1             reduce using rule 6 (tag -> BOLD .)
    UL1             reduce using rule 6 (tag -> BOLD .)
    $end            reduce using rule 6 (tag -> BOLD .)


state 19

    (11) tag -> ol .

    ITALIC          reduce using rule 11 (tag -> ol .)
    BOLD            reduce using rule 11 (tag -> ol .)
    FLUO            reduce using rule 11 (tag -> ol .)
    PARAGRAPHE      reduce using rule 11 (tag -> ol .)
    SEPARATION_LINE reduce using rule 11 (tag -> ol .)
    TITLE3          reduce using rule 11 (tag -> ol .)
    TITLE2          reduce using rule 11 (tag -> ol .)
    TITLE1          reduce using rule 11 (tag -> ol .)
    LINK            reduce using rule 11 (tag -> ol .)
    IMAGE           reduce using rule 11 (tag -> ol .)
    REFERENCE       reduce using rule 11 (tag -> ol .)
    WORD            reduce using rule 11 (tag -> ol .)
    OL1             reduce using rule 11 (tag -> ol .)
    UL1             reduce using rule 11 (tag -> ol .)
    $end            reduce using rule 11 (tag -> ol .)


state 20

    (30) tag -> REFERENCE .

    ITALIC          reduce using rule 30 (tag -> REFERENCE .)
    BOLD            reduce using rule 30 (tag -> REFERENCE .)
    FLUO            reduce using rule 30 (tag -> REFERENCE .)
    PARAGRAPHE      reduce using rule 30 (tag -> REFERENCE .)
    SEPARATION_LINE reduce using rule 30 (tag -> REFERENCE .)
    TITLE3          reduce using rule 30 (tag -> REFERENCE .)
    TITLE2          reduce using rule 30 (tag -> REFERENCE .)
    TITLE1          reduce using rule 30 (tag -> REFERENCE .)
    LINK            reduce using rule 30 (tag -> REFERENCE .)
    IMAGE           reduce using rule 30 (tag -> REFERENCE .)
    REFERENCE       reduce using rule 30 (tag -> REFERENCE .)
    WORD            reduce using rule 30 (tag -> REFERENCE .)
    OL1             reduce using rule 30 (tag -> REFERENCE .)
    UL1             reduce using rule 30 (tag -> REFERENCE .)
    $end            reduce using rule 30 (tag -> REFERENCE .)


state 21

    (15) oList -> OL2 . oList
    (16) oList -> OL2 .
    (15) oList -> . OL2 oList
    (16) oList -> . OL2

    ITALIC          reduce using rule 16 (oList -> OL2 .)
    BOLD            reduce using rule 16 (oList -> OL2 .)
    FLUO            reduce using rule 16 (oList -> OL2 .)
    PARAGRAPHE      reduce using rule 16 (oList -> OL2 .)
    SEPARATION_LINE reduce using rule 16 (oList -> OL2 .)
    TITLE3          reduce using rule 16 (oList -> OL2 .)
    TITLE2          reduce using rule 16 (oList -> OL2 .)
    TITLE1          reduce using rule 16 (oList -> OL2 .)
    LINK            reduce using rule 16 (oList -> OL2 .)
    IMAGE           reduce using rule 16 (oList -> OL2 .)
    REFERENCE       reduce using rule 16 (oList -> OL2 .)
    WORD            reduce using rule 16 (oList -> OL2 .)
    OL1             reduce using rule 16 (oList -> OL2 .)
    UL1             reduce using rule 16 (oList -> OL2 .)
    $end            reduce using rule 16 (oList -> OL2 .)
    OL2             shift and go to state 21

    oList                          shift and go to state 27

state 22

    (14) olSubList -> OL1 oList .

    ITALIC          reduce using rule 14 (olSubList -> OL1 oList .)
    BOLD            reduce using rule 14 (olSubList -> OL1 oList .)
    FLUO            reduce using rule 14 (olSubList -> OL1 oList .)
    PARAGRAPHE      reduce using rule 14 (olSubList -> OL1 oList .)
    SEPARATION_LINE reduce using rule 14 (olSubList -> OL1 oList .)
    TITLE3          reduce using rule 14 (olSubList -> OL1 oList .)
    TITLE2          reduce using rule 14 (olSubList -> OL1 oList .)
    TITLE1          reduce using rule 14 (olSubList -> OL1 oList .)
    LINK            reduce using rule 14 (olSubList -> OL1 oList .)
    IMAGE           reduce using rule 14 (olSubList -> OL1 oList .)
    REFERENCE       reduce using rule 14 (olSubList -> OL1 oList .)
    WORD            reduce using rule 14 (olSubList -> OL1 oList .)
    OL1             reduce using rule 14 (olSubList -> OL1 oList .)
    UL1             reduce using rule 14 (olSubList -> OL1 oList .)
    $end            reduce using rule 14 (olSubList -> OL1 oList .)


state 23

    (3) document -> document tag .

    ITALIC          reduce using rule 3 (document -> document tag .)
    BOLD            reduce using rule 3 (document -> document tag .)
    FLUO            reduce using rule 3 (document -> document tag .)
    PARAGRAPHE      reduce using rule 3 (document -> document tag .)
    SEPARATION_LINE reduce using rule 3 (document -> document tag .)
    TITLE3          reduce using rule 3 (document -> document tag .)
    TITLE2          reduce using rule 3 (document -> document tag .)
    TITLE1          reduce using rule 3 (document -> document tag .)
    LINK            reduce using rule 3 (document -> document tag .)
    IMAGE           reduce using rule 3 (document -> document tag .)
    REFERENCE       reduce using rule 3 (document -> document tag .)
    WORD            reduce using rule 3 (document -> document tag .)
    OL1             reduce using rule 3 (document -> document tag .)
    UL1             reduce using rule 3 (document -> document tag .)
    $end            reduce using rule 3 (document -> document tag .)


state 24

    (4) document -> document word .

    ITALIC          reduce using rule 4 (document -> document word .)
    BOLD            reduce using rule 4 (document -> document word .)
    FLUO            reduce using rule 4 (document -> document word .)
    PARAGRAPHE      reduce using rule 4 (document -> document word .)
    SEPARATION_LINE reduce using rule 4 (document -> document word .)
    TITLE3          reduce using rule 4 (document -> document word .)
    TITLE2          reduce using rule 4 (document -> document word .)
    TITLE1          reduce using rule 4 (document -> document word .)
    LINK            reduce using rule 4 (document -> document word .)
    IMAGE           reduce using rule 4 (document -> document word .)
    REFERENCE       reduce using rule 4 (document -> document word .)
    WORD            reduce using rule 4 (document -> document word .)
    OL1             reduce using rule 4 (document -> document word .)
    UL1             reduce using rule 4 (document -> document word .)
    $end            reduce using rule 4 (document -> document word .)


state 25

    (22) ul1List -> UL1 . ul1List
    (23) ul1List -> UL1 . ul2SubList
    (24) ul1List -> UL1 .
    (22) ul1List -> . UL1 ul1List
    (23) ul1List -> . UL1 ul2SubList
    (24) ul1List -> . UL1
    (25) ul2SubList -> . UL1 ul2List

  ! shift/reduce conflict for UL1 resolved as shift
    ITALIC          reduce using rule 24 (ul1List -> UL1 .)
    BOLD            reduce using rule 24 (ul1List -> UL1 .)
    FLUO            reduce using rule 24 (ul1List -> UL1 .)
    PARAGRAPHE      reduce using rule 24 (ul1List -> UL1 .)
    SEPARATION_LINE reduce using rule 24 (ul1List -> UL1 .)
    TITLE3          reduce using rule 24 (ul1List -> UL1 .)
    TITLE2          reduce using rule 24 (ul1List -> UL1 .)
    TITLE1          reduce using rule 24 (ul1List -> UL1 .)
    LINK            reduce using rule 24 (ul1List -> UL1 .)
    IMAGE           reduce using rule 24 (ul1List -> UL1 .)
    REFERENCE       reduce using rule 24 (ul1List -> UL1 .)
    WORD            reduce using rule 24 (ul1List -> UL1 .)
    OL1             reduce using rule 24 (ul1List -> UL1 .)
    $end            reduce using rule 24 (ul1List -> UL1 .)
    UL1             shift and go to state 28

  ! UL1             [ reduce using rule 24 (ul1List -> UL1 .) ]

    ul2SubList                     shift and go to state 29
    ul1List                        shift and go to state 30

state 26

    (21) ul1SubList -> UL1 ul1List .

    ITALIC          reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    BOLD            reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    FLUO            reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    PARAGRAPHE      reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    SEPARATION_LINE reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    TITLE3          reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    TITLE2          reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    TITLE1          reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    LINK            reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    IMAGE           reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    REFERENCE       reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    WORD            reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    OL1             reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    UL1             reduce using rule 21 (ul1SubList -> UL1 ul1List .)
    $end            reduce using rule 21 (ul1SubList -> UL1 ul1List .)


state 27

    (15) oList -> OL2 oList .

    ITALIC          reduce using rule 15 (oList -> OL2 oList .)
    BOLD            reduce using rule 15 (oList -> OL2 oList .)
    FLUO            reduce using rule 15 (oList -> OL2 oList .)
    PARAGRAPHE      reduce using rule 15 (oList -> OL2 oList .)
    SEPARATION_LINE reduce using rule 15 (oList -> OL2 oList .)
    TITLE3          reduce using rule 15 (oList -> OL2 oList .)
    TITLE2          reduce using rule 15 (oList -> OL2 oList .)
    TITLE1          reduce using rule 15 (oList -> OL2 oList .)
    LINK            reduce using rule 15 (oList -> OL2 oList .)
    IMAGE           reduce using rule 15 (oList -> OL2 oList .)
    REFERENCE       reduce using rule 15 (oList -> OL2 oList .)
    WORD            reduce using rule 15 (oList -> OL2 oList .)
    OL1             reduce using rule 15 (oList -> OL2 oList .)
    UL1             reduce using rule 15 (oList -> OL2 oList .)
    $end            reduce using rule 15 (oList -> OL2 oList .)


state 28

    (22) ul1List -> UL1 . ul1List
    (23) ul1List -> UL1 . ul2SubList
    (24) ul1List -> UL1 .
    (25) ul2SubList -> UL1 . ul2List
    (22) ul1List -> . UL1 ul1List
    (23) ul1List -> . UL1 ul2SubList
    (24) ul1List -> . UL1
    (25) ul2SubList -> . UL1 ul2List
    (26) ul2List -> . UL2 ul2List
    (27) ul2List -> . UL2

  ! shift/reduce conflict for UL1 resolved as shift
    ITALIC          reduce using rule 24 (ul1List -> UL1 .)
    BOLD            reduce using rule 24 (ul1List -> UL1 .)
    FLUO            reduce using rule 24 (ul1List -> UL1 .)
    PARAGRAPHE      reduce using rule 24 (ul1List -> UL1 .)
    SEPARATION_LINE reduce using rule 24 (ul1List -> UL1 .)
    TITLE3          reduce using rule 24 (ul1List -> UL1 .)
    TITLE2          reduce using rule 24 (ul1List -> UL1 .)
    TITLE1          reduce using rule 24 (ul1List -> UL1 .)
    LINK            reduce using rule 24 (ul1List -> UL1 .)
    IMAGE           reduce using rule 24 (ul1List -> UL1 .)
    REFERENCE       reduce using rule 24 (ul1List -> UL1 .)
    WORD            reduce using rule 24 (ul1List -> UL1 .)
    OL1             reduce using rule 24 (ul1List -> UL1 .)
    $end            reduce using rule 24 (ul1List -> UL1 .)
    UL1             shift and go to state 28
    UL2             shift and go to state 31

  ! UL1             [ reduce using rule 24 (ul1List -> UL1 .) ]
